# culvert

./: .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_AND_PROMPT.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONTRIBUTING.md  HANDOFF-console-ui.md  LICENSE  PLATFORM_TEAM_INFO.md  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  RELEASE.md  REPO_RENAME.md  SECURITY.md  SHIPPING.md  pyproject.toml  test_deployment.sh
data-pipeline-libraries/data-pipeline-contract-tests/: pyproject.toml
data-pipeline-libraries/data-pipeline-contract-tests/src/data_pipeline_contract_tests/: __init__.py  blob_store.py  secrets.py  stage_metrics_hook.py  warehouse.py
data-pipeline-libraries/data-pipeline-contract-tests/tests/: test_smoke.py
data-pipeline-libraries/data-pipeline-core/: COMPATIBILITY.md  CONTRACT_CONFORMANCE.md  README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-core/src/data_pipeline_core/: __init__.py  autoconfig.py  decorators.py  runtime.py
data-pipeline-libraries/data-pipeline-core/tests/: test_autoconfig.py  test_budget_governance.py  test_contracts_importable.py  test_dataquality.py  test_governance_concretes.py  test_runtime.py  test_runtime_checkable.py  test_stage_metrics.py  test_supporting_types.py
data-pipeline-libraries/data-pipeline-framework/: README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-framework/src/data_pipeline_framework/: __init__.py  cli.py
data-pipeline-libraries/data-pipeline-gcp-bigquery/: README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-gcp-bigquery/src/data_pipeline_gcp_bigquery/: __init__.py  cost_tracker.py  finops_sink.py  warehouse.py
data-pipeline-libraries/data-pipeline-gcp-bigquery/tests/: test_autoconfig_discovery.py  test_cost_tracker.py  test_finops_sink.py  test_warehouse.py
data-pipeline-libraries/data-pipeline-gcp-gcs/: README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-gcp-gcs/src/data_pipeline_gcp_gcs/: __init__.py  blob_store.py  cost_tracker.py
data-pipeline-libraries/data-pipeline-gcp-gcs/tests/: test_autoconfig_discovery.py  test_blob_store.py  test_cost_tracker.py
data-pipeline-libraries/data-pipeline-gcp-observability/: pyproject.toml
data-pipeline-libraries/data-pipeline-gcp-observability/src/data_pipeline_gcp_observability/: __init__.py  cloud_monitoring_metrics_hook.py  cloud_trace_observability_hook.py  culvert_mdc_populator.py  data_catalog_lineage_emitter.py
data-pipeline-libraries/data-pipeline-gcp-observability/tests/: test_autoconfig_discovery.py  test_cloud_monitoring_metrics_hook.py  test_cloud_trace_observability_hook.py  test_culvert_mdc_populator.py  test_data_catalog_lineage_emitter.py
data-pipeline-libraries/data-pipeline-gcp-pubsub/: README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-gcp-pubsub/src/data_pipeline_gcp_pubsub/: __init__.py  cost_tracker.py  io.py
data-pipeline-libraries/data-pipeline-gcp-pubsub/tests/: test_autoconfig_discovery.py  test_cost_tracker.py  test_io.py
data-pipeline-libraries/data-pipeline-gcp-secrets/: README.md  pyproject.toml
data-pipeline-libraries/data-pipeline-gcp-secrets/src/data_pipeline_gcp_secrets/: __init__.py  secret_manager_provider.py
data-pipeline-libraries/data-pipeline-gcp-secrets/tests/: test_secret_manager_provider.py
data-pipeline-libraries/data-pipeline-orchestration/: README.md  SPEC.md  pyproject.toml
data-pipeline-libraries/data-pipeline-orchestration/src/data_pipeline_orchestration/: __init__.py  _job_control.py  dependency.py
data-pipeline-libraries/data-pipeline-orchestration/tests/: conftest.py
data-pipeline-libraries/data-pipeline-orchestration/tests/unit/: test_create_dags.py  test_dag_factory.py  test_dataflow_operator.py  test_dependency.py  test_router.py  test_sensors.py
data-pipeline-libraries/data-pipeline-transform/: README.md  SPEC.md  pyproject.toml
data-pipeline-libraries/data-pipeline-transform/tests/unit/: test_macros_rendered.py
deployments/fdp-trigger/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
deployments/fdp-trigger/helm/: Chart.yaml  README.md  values.yaml
deployments/fdp-trigger/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
deployments/fdp-trigger/src/fdp_trigger/: config.py  dedup.py  job_control.py  launcher.py  main.py  readiness.py
deployments/fdp-trigger/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
deployments/fdp-trigger/tests/unit/: test_config.py  test_dedup.py  test_main.py  test_readiness.py
deployments/mainframe-segment-transform/: Dockerfile  cloudbuild-monthly.yaml  cloudbuild.yaml  metadata.json  pyproject.toml  requirements.txt  setup.py
deployments/mainframe-segment-transform/config/: system.yaml
deployments/mainframe-segment-transform/config/templates/: check_debit_card.yaml  credit_card.yaml  customer.yaml  loans.yaml  savings.yaml
deployments/mainframe-segment-transform/docs/: CDP_SEGMENT_ARCHITECTURE.md  PRODUCTION_HARDENING_PROMPT.md  TEMPLATE_GUIDE.md  TESTING_GUIDE.md
deployments/mainframe-segment-transform/scripts/: build_flex_template.sh  e2e_segment_test.sh  load_cdp_test_data.sh
deployments/mainframe-segment-transform/src/: launch.py
deployments/mainframe-segment-transform/tests/: conftest.py
deployments/mainframe-segment-transform/tests/data/: cdp_card_accounts.json  cdp_credit_card_accounts.json  cdp_customer_risk_profile.json  cdp_loan_accounts.json  cdp_savings_accounts.json
deployments/postgres-cdc-streaming/: README.md  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-framework/: README.md  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-framework/src/gcp_pipeline_framework/: __init__.py
gcp-pipeline-libraries/gcp-pipeline-tester/: README.md  pyproject.toml
gcp-pipeline-libraries/gcp-pipeline-tester/src/gcp_pipeline_tester/: __init__.py
gcp-pipeline-libraries/gcp-pipeline-transform/: README.md  pyproject.toml
python-culvert/: README.md  hatch_build.py  pyproject.toml
python-culvert/src/culvert/: __init__.py
(+867 files in other folders)
