[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "culvert"
version = "1.0.29"
description = "GCP Pipeline Reference - Monorepo root for unified IDE context"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Good Shepherd Software Consultancy Limited" }]
dependencies = []

[tool.setuptools.packages.find]
where = [
    "gcp-pipeline-libraries/gcp-pipeline-core/src",
    "gcp-pipeline-libraries/gcp-pipeline-beam/src",
    "gcp-pipeline-libraries/gcp-pipeline-orchestration/src",
    "gcp-pipeline-libraries/gcp-pipeline-transform/src",
    "gcp-pipeline-libraries/gcp-pipeline-tester/src",
    "gcp-pipeline-libraries/gcp-pipeline-framework/src",
    "deployments/original-data-to-bigqueryload/src",
    "deployments/data-pipeline-orchestrator",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "apache-beam[gcp]==2.56.0",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.0.0",
    "google-cloud-pubsub>=2.0.0",
    "apache-airflow>=2.8.0",
    "apache-airflow-providers-google>=10.1.0",
    "dbt-bigquery>=1.7.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "pandas",
]
