# The `culvert` PyPI distribution (D1 decision, 2026-07: ONE distribution with
# extras — the Maven side stays modular; Python presents one front door).
#
# This pyproject assembles the data-pipeline-libraries/* import packages into a
# single wheel via hatchling force-include. Import names stay `data_pipeline_*`
# for 0.1.0 so every path:line citation in the book remains true; the `culvert`
# import package is a thin front door (version + re-exports).
#
# Excluded on purpose: data_pipeline_framework (the legacy bundle — predecessor
# deps; removed entirely at the F1 legacy cleanup).
#
# Entry points: the per-library `data_pipeline_core.adapters` registrations are
# merged here — without them AutoConfig discovery finds nothing. autoconfig
# skips entry points whose deps aren't installed (core-only install is safe).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "culvert"
version = "0.1.0"
description = "Cloud-agnostic, polyglot data-pipeline framework: one contract set, adapters per cloud. Python side of Culvert (Java twin on Maven Central: com.enrichmeai.culvert)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Joseph Aruja" }]
keywords = ["data-pipeline", "framework", "cloud-agnostic", "gcp", "bigquery", "dbt", "airflow", "contracts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typing-extensions>=4.7",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/culvert"
Repository = "https://github.com/enrichmeai/culvert"
Issues = "https://github.com/enrichmeai/culvert/issues"

[project.optional-dependencies]
gcp = [
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-monitoring>=2.14.0",
    "google-cloud-datacatalog>=3.14.0",
    "opentelemetry-api>=1.20.0",
]
orchestration = [
    "PyYAML>=6.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-bigquery>=3.11.0",
]
transform = [
    "dbt-bigquery>=1.5.0",
]
tester = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "apache-beam[gcp]==2.56.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-pubsub>=2.18.0",
]
contract-tests = [
    "pytest>=7.4",
]
all = [
    "culvert[gcp,orchestration,transform]",
]

[project.entry-points."data_pipeline_core.adapters"]
blob_store = "data_pipeline_gcp_gcs:GcsBlobStore"
warehouse = "data_pipeline_gcp_bigquery:BigQueryWarehouse"
finops = "data_pipeline_gcp_bigquery:BigQueryFinOpsSink"
source = "data_pipeline_gcp_pubsub:PubSubSource"
sink = "data_pipeline_gcp_pubsub:PubSubSink"
secrets = "data_pipeline_gcp_secrets:SecretManagerProvider"
observability = "data_pipeline_gcp_observability:CloudTraceObservabilityHook"
stage_metrics = "data_pipeline_gcp_observability:CloudMonitoringMetricsHook"
lineage = "data_pipeline_gcp_observability:DataCatalogLineageEmitter"

[tool.hatch.build.targets.wheel]
packages = ["src/culvert"]

# Library packages are force-included by the build hook (hatch_build.py),
# which resolves them from the repo or from an extracted sdist.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"


[tool.hatch.build.targets.sdist]
include = ["src/culvert", "README.md", "pyproject.toml", "hatch_build.py"]

[tool.hatch.build.targets.sdist.force-include]
"../data-pipeline-libraries/data-pipeline-core/src/data_pipeline_core" = "src/data_pipeline_core"
"../data-pipeline-libraries/data-pipeline-gcp-bigquery/src/data_pipeline_gcp_bigquery" = "src/data_pipeline_gcp_bigquery"
"../data-pipeline-libraries/data-pipeline-gcp-gcs/src/data_pipeline_gcp_gcs" = "src/data_pipeline_gcp_gcs"
"../data-pipeline-libraries/data-pipeline-gcp-pubsub/src/data_pipeline_gcp_pubsub" = "src/data_pipeline_gcp_pubsub"
"../data-pipeline-libraries/data-pipeline-gcp-secrets/src/data_pipeline_gcp_secrets" = "src/data_pipeline_gcp_secrets"
"../data-pipeline-libraries/data-pipeline-gcp-observability/src/data_pipeline_gcp_observability" = "src/data_pipeline_gcp_observability"
"../data-pipeline-libraries/data-pipeline-orchestration/src/data_pipeline_orchestration" = "src/data_pipeline_orchestration"
"../data-pipeline-libraries/data-pipeline-transform/src/data_pipeline_transform" = "src/data_pipeline_transform"
"../data-pipeline-libraries/data-pipeline-tester/src/data_pipeline_tester" = "src/data_pipeline_tester"
"../data-pipeline-libraries/data-pipeline-contract-tests/src/data_pipeline_contract_tests" = "src/data_pipeline_contract_tests"

[tool.hatch.build]
exclude = ["**/__pycache__", "**/*.pyc", "**/.pytest_cache", "**/*.egg-info"]
