[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline-core"
version = "0.1.0"
description = "Cloud-neutral contracts for the Culvert data pipeline framework. The framework-agnostic kernel: Protocols, dataclasses, and types. Zero GCP/AWS/Azure SDK dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joseph Aruja", email = "joseph.a.aruja@googlemail.com" },
]
keywords = ["data", "pipeline", "framework", "cloud-neutral", "culvert"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/gcp-pipeline-reference"
Repository = "https://github.com/enrichmeai/gcp-pipeline-reference"
"Bug Tracker" = "https://github.com/enrichmeai/gcp-pipeline-reference/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
data_pipeline_core = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
