[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline-gcp-bigquery"
version = "0.1.0"
description = "Google Cloud BigQuery adapter for the Culvert data pipeline framework. Implements the cloud-neutral Warehouse contract from data-pipeline-core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joseph Aruja", email = "joseph.a.aruja@googlemail.com" },
]
keywords = ["data", "pipeline", "framework", "culvert", "bigquery", "gcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "data-pipeline-core>=0.1.0",
    "google-cloud-bigquery>=3.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/culvert"
Repository = "https://github.com/enrichmeai/culvert"
"Bug Tracker" = "https://github.com/enrichmeai/culvert/issues"

[project.entry-points."data_pipeline_core.adapters"]
warehouse = "data_pipeline_gcp_bigquery:BigQueryWarehouse"
finops = "data_pipeline_gcp_bigquery:BigQueryFinOpsSink"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --import-mode=importlib"
