[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline-orchestration"
version = "0.1.0"
description = "Orchestration library for the Culvert data pipeline framework. Airflow DAG factory, operators, sensors, and callbacks. Cloud-coupled to Composer/Airflow — Airflow is Python-only and is not being polyglot-ported."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joseph Aruja", email = "joseph.a.aruja@googlemail.com" },
]
keywords = ["data", "pipeline", "framework", "culvert", "airflow", "composer", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "data-pipeline-core>=0.1.0",
    "google-cloud-storage",
    "google-cloud-pubsub",
    "PyYAML>=6.0",
    "google-cloud-bigquery>=3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/culvert"
Repository = "https://github.com/enrichmeai/culvert"
"Bug Tracker" = "https://github.com/enrichmeai/culvert/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
