[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-ref-segment-transform"
version = "1.0.29"
description = "GCP Pipeline Reference: Mainframe Segment Transform — template-driven CDP → fixed-width GCS segment files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["gcp", "dataflow", "beam", "cdp", "mainframe", "segment", "reference", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "apache-beam[gcp]==2.56.0",
    "gcp-pipeline-core==1.0.29",
    "gcp-pipeline-beam==1.0.29",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/culvert"
Documentation = "https://github.com/enrichmeai/culvert/tree/main/deployments/mainframe-segment-transform"
Repository = "https://github.com/enrichmeai/culvert"
Framework = "https://pypi.org/project/data-pipeline-framework/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.py", "*.txt", "*.md", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
