[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgres-cdc-streaming"
version = "0.1.0"
description = "Real-time CDC streaming pipeline: PostgreSQL → Kafka → Beam → BigQuery (built on Culvert)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "apache-beam[gcp]==2.56.0",
    "confluent-kafka>=2.3.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-storage>=2.14.0",
    "culvert[gcp]>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

