[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-pipeline-framework"
version = "2.0.0"
description = "DEPRECATED — thin deprecation shim that installs `data-pipeline-framework`. Renamed as part of the Culvert framework rebranding (Stage 1 of docs/framework-evolution/02-redesign.md). The umbrella metapackage now ships under the data-pipeline name. This package will be removed in a future release."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Joseph Aruja", email = "joseph.a.aruja@googlemail.com" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["deprecated", "data-pipeline-framework", "culvert", "shim", "metapackage"]

dependencies = [
    "data-pipeline-framework>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/enrichmeai/gcp-pipeline-reference"
Repository = "https://github.com/enrichmeai/gcp-pipeline-reference"
"Bug Tracker" = "https://github.com/enrichmeai/gcp-pipeline-reference/issues"

[tool.setuptools.packages.find]
where = ["src"]
